--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "index.ts",
   "type": "commonjs",
   "scripts": {
+    "moduleAliases:prod": "cross-env NODE_ENV=production node scripts/add_modulealiastoScript.js",
+    "moduleAliases:dev": "cross-env NODE_ENV=development node scripts/add_modulealiastoScript.js",
     "build": "node scripts/build.js",
-    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
-    "start:build": "npm run build && npm run start-app",
-    "prestart": "npm run build",
+    "deployDB:prod": "node scripts/builddeploy_prod.js",
+    "deployDB:dev": "node scripts/builddeploy_deve.js",
+    "pushDB": "node scripts/pushDBprisma.js",
     "start-app": "cross-env NODE_ENV=production node -r module-alias/register build/src/index.js",
+    "start:build": "npm run build && npm run start-app",
+    "prestart": "npm run moduleAliases:prod && npm run deployDB:prod && npm run build",
     "start": "npm run start-app",
+    "start:dev": "npm run moduleAliases:dev && npm run deployDB:dev && cross-env NODE_ENV=development nodemon src/index.ts",
     "test": "jest"
   },
   "keywords": [
@@ -30,6 +35,7 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
