--- a/tsconfig.json
+++ b/tsconfig.json
@@ -114,7 +114,7 @@
     // "skipDefaultLibCheck": true,
     "skipLibCheck": true
   },
-  "include": ["**/*.ts, **/*.d.ts", "src/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "build"],
   "files": ["src/index.ts"]
 }
